Changed the projects and CV pages: added my awards, my experience, my games. Added 3 new pages: Fat.html,IwoJima.html, Shooter.html

--- a/cv.html
+++ b/cv.html
@@ -4,19 +4,19 @@
 <!--head.META-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1">
-    <meta name="description" content="Hi. I'm David, a hacker and data-junkie who loves building meaningful products">
-    <meta name="keywords" content="David, Aaron, Campos, R, SQL, HTML, CSS, JavaScript, Web Design, Web Development, Data Science, Analysis, Statistical Learning">
-    <meta name="author" content="David A Campos">
-    <meta property="og:title" content="David A Campos"/>
+    <meta name="description" content="Hi. I'm Erik, a hacker and aspiring game developer who loves building meaningful products.">
+    <meta name="keywords" content="Erik, Ramos, JavaScript, C#, Java, GameSalad">
+    <meta name="author" content="Erik Ramos">
+    <meta property="og:title" content="Erik Ramos"/>
     <meta property="og:image" content="http://i.imgur.com/pH20JCA.png"/>
-    <meta property="og:url" content="http://www.inertia7.com"/>
-    <meta property="og:description" content="Hi. I'm David, a hacker and data-junkie who loves building meaningful products."/>
+    <meta property="og:url" content="http://www.erikramosl.com"/>
+    <meta property="og:description" content="Hi. I'm Erik, a hacker and aspiring game developer who loves building meaningful products."/>
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="https://www.davidacampos.com">
-    <meta name="twitter:title" content="David A Campos">
-    <meta name="twitter:description" content="Hi. I'm David, a hacker and data-junkie who loves building meaningful products.">
+    <meta name="twitter:url" content="https://www.erikramosl.com">
+    <meta name="twitter:title" content="Erik A Ramos">
+    <meta name="twitter:description" content="Hi. I'm Erik, a hacker and aspiring game developer who loves building meaningful products.">
     <meta name="twitter:image" content="http://i.imgur.com/pH20JCA.png">
-    <link rel="publisher" href="https://www.davidacampos.com"/>
+    <link rel="publisher" href="https://www.erikramosl.com"/>
 <!--head.CSS-->
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -30,7 +30,7 @@
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="shortcut icon" href="favicon.ico" type="img/x-icon">    
 <!-- TITLE -->
-    <title>David A Campos</title>
+    <title>Erik Ramos - Curriculum Vitae</title>
 <!-- Loading jQuery.JS -->
     <script src="js/jquery.js"></script>
 </head>
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand page-scroll" href="index.html">
-                    <span class="light">David A</span> Campos
+                    <span class="light">Erik</span> Ramos
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -69,7 +69,7 @@
     </header>
 <!-- CORE BODY -->
 	<section class="container content-section">
-		<h1 style="letter-spacing:5px" class="center">David <span class="blue">Aaron</span> Campos</h1>
+		<h1 style="letter-spacing:5px" class="center">Erik <span class="blue">Ramos</span> Lizarraga</h1>
 		<br/>
 		<br/>
 		<!-- INTERESTS -->
@@ -80,70 +80,11 @@
         <br/>
         	<div class="resumeblock">
         		<h3 class="blue">
-        			Building internet &amp; data machines. Learning.
+        			Playing Games &amp; Programming. Learning.
         		</h3>
         	</div>
         <br/>
         <br/>
-		<!-- EDUCATION -->
-        <h5 class="cvHeader">
-        	Education
-        </h5>
-        <hr>
-        <br/>
-        	<div class="resumeblock">
-        		<!-- TMP Certificate -->
-        		<h3 class="blue">
-        			Professional Certificate in <strong>Technology Entrepreneurship</strong>
-        		</h3>
-				<h4>
-					<strong>
-						University of California, Santa Barbara (Extension)
-					</strong>
-				</h4>
-           		<br/>
-           		<ul class="resumedetails">
-               		<li>
-               			<strong>Relevant coursework:</strong> Creating a Market-tested Startup Business Model, Entrepreneurship, Business Strategy, Marketing, Human Resources &amp; Leadership, Telecommunications &amp; Information Technology
-               		</li>
-               	</ul>
-               	<br/>
-               	<br/>
-               	<!-- UCSB BA ECON SPAN -->
-           		<h3 class="blue">
-           			Bachelor of Arts in <strong>Economics &amp; Spanish</strong>
-           		</h3>
-           		<h4>
-               		<strong>
-               			University of California, Santa Barbara
-               		</strong>
-               	</h4>
-           		<br/>
-           		<ul class="resumedetails">
-               		<li>
-               			<strong>Relevant coursework:</strong> Microeconomics, Macroeconomics, Econometrics, Environmental Economics, Crime &amp; Justice Economics, Game Theory, Development Economics, Vector Calculus, Differential Equations, Probability &amp; Statistics, Linear Algebra, Theoretical Mathematics, Spanish Literature, Spanish Linguistics
-           			</li>
-           		</ul>
-           		<br/>
-           		<br/>
-           		<!-- EAP MADRID -->
-           		<h3 class="blue">
-           			University of California, Educational Abroad Program
-           		</h3>
-           		<h4>
-               		<strong>
-               			Complutense University of Madrid
-               		</strong>
-           		</h4>
-           		<br/>
-           		<ul class="resumedetails">
-               		<li>
-               			Immersive cultural and language program in Madrid, Spain
-           			</li>
-           		</ul>
-           		<br/>
-           	</div>
-		<br/>
 		<!-- Experience -->
         <h5 class="cvHeader">
         	Experience
@@ -153,121 +94,47 @@
                 <!-- Impact Radius -->
                 <div class="resumeblock">
                         <h3 class="blue">
-                                Associate Product Manager
+                          Isability Testing Intern
                         </h3>
                         <h4>
-                                        <strong>HG Data</strong>
+                          <strong>Inertia7</strong>
                         </h4>
                         <h5>
-                                Santa Barbara (CA), September 2016 - Today
+                          San Diego (CA), July 2016 - Today
                         </h5>
                         <br/>
                         <ul class="resumedetails">
                         <li>
-                                Business Intelligence for Sales, Marketing, and Analytics.
+                          Use <a href="http://www.inertia7.com">Inertia7</a>, a platform for sharing data science projects, and provide feedback on usability to the product team.
                         </li>
                         </ul>
                 </div>
                 <br/>
-
-        	<!-- Impact Radius -->
-        	<div class="resumeblock">
-           		<h3 class="blue">
-           			Technical Product Engineer
-           		</h3>
-           		<h4>
-					<strong>Impact Radius</strong>
-           		</h4>
-           		<h5>
-           			Santa Barbara (CA), September 2015 - June 2016
-           		</h5>
-           		<br/>
-           		<ul class="resumedetails">
-               		<li>
-               			Impact Radius is web platform that helps digital marketers optimize affiliate management, multi-channel attribution, and tag manangement.
-               		</li>
-               		<br/>
-               		<li>
-               			<strong>Primary functions</strong>: technical support, customer service, account integrations, escalating product feature requests, writing product documentation.
-               		</li>
-           		</ul>
-           	</div>
-           	<br/>
-        	<!-- BoxIT Services -->
-        	<div class="resumeblock">
-           		<h3 class="blue">
-           			Project Manager
-           		</h3>
-           		<h4>
-					<strong>BoxIT Services</strong>
-           		</h4>
-           		<h5>
-           			Santa Barbara (CA), April 2015 - September 2015
-           		</h5>
-           		<br/>
-           		<ul class="resumedetails">
-               		<li>
-               			BoxIT Services is a consulting &amp; web development agency for small businesses.
-               		</li>
-               		<br/>
-               		<li>
-               			<strong>Primary functions</strong>: sales engineering, web design &amp; development. Built <a href="https://www.boxitservices.com" target="_blank">BoxIT Services Official Website</a>, which required SSL certification for HTTPS &amp; e-commerce integration with Stripe.
-               		</li>
-           		</ul>
-           	</div>
-           	<br/>
-           	<!-- RightScale -->
-           	<div class="resumeblock">
-           		<h3 class="blue">
-           			ENTERPRISE SALES DEVELOPMENT REPRESENTATIVE
-           		</h3>
-           		<h4>
-               		<strong>RightScale, Inc</strong>
-           		</h4>
-           		<h5>
-           			Santa Barbara, September 2013 - September 2014
-           		</h5>
-           		<br/>
-           		<ul class="resumedetails">
-           			<li>
-           				RightScale is a web platform that helps engineering teams optimize their consumption of cloud resources across AWS, Windows Azure, Google Compute, and others.
-           			</li>
-               	<br/>
-           			<li>
-           				<strong>Primary functions</strong>: prospecting qualified leads, reaching out to inbound &amp; outbound leads, creating business opportunities and escalating them to quota-carrying reps.
-                </li>
-                <br/>
-                <li>
-                  Developed business with closed-won accounts including VW/Audi, Moxie Software, Realty Income Corporation, Spartan Systems, among others
-           			</li>
-           		</ul>
-           	</div>
-           	<br/>
            	<!-- Napses -->
            	<div class="resumeblock">
            		<h3 class="blue">
-           			FOUNDER &amp; CEO
+           			Game Developer
            		</h3>
            		<h4>
            		<strong>
-           			Napses, LLC
+           			Monte Vista High School
            		</strong>
            		</h4>
            		<h5>
-           			Santa Barbara (CA), June 2012 - June 2014
+           			San Diego (CA), 2013 - Today
            		</h5>
            		<br/>
            		<ul class="resumedetails">
                		<li>
-               			Conducted over 500 customer development &amp; market validation interviews to develop business model for digital, legal, &amp; cheaper distribution of academic content within university infrastructure
+               			Learned &amp; developed games with GameSalad &amp; Scratch. Currently learning &amp; developing with the Unity Game Engine (C#, JavaScript).  
                		</li>
                		<br/>
                		<li>
-               			Won third place at 2013 New Venture Competition at UCSB <a href="assets/npsDeck.pdf" target="_blank">(Napses Deck)</a>
+               			Part of the first generation of game design &amp; development class at Monte Vista High School.
                		</li>
                		<br/>
                		<li>
-               			Designed, co-developed, &amp; shipped revenue-generating product (web platform) to around 100 customers
+               			Won an award for outstanding student in game design &amp; development class.
                		</li>
            		</ul>
            	</div>
@@ -281,88 +148,23 @@
         	<div class="resumeblock">
         		<!-- NVC -->
             		<h3 class="blue">
-            			New Venture Competition Winner
+            			Career Technical Education Award
             		</h3>
 					<h4>
 						<strong>
-							Technology Management Program (UCSB)
+							Monte Vista High School
 						</strong>
 					</h4>
                		<h5>
-               			May 2013
+               			2013
                		</h5>
                		<br/>
                		<ul class="resumedetails">
 	               		<li>
-	               			Third-place award recipient: Napses
+	               			Received this award for best game designer &amp; developer across the Grossmont District in San Diego, CA. Assisted classmates with making their own games by showing them how to use GameSalad Engine.
 	               		</li>
 	               	</ul>
                		<br/>
-               	<!-- Young Innovator Scholar -->
-            		<h3 class="blue">
-            			Young Innovator Scholarship
-            		</h3>
-					<h4>
-						<strong>
-							Technology Management Program (UCSB)
-						</strong>
-					</h4>
-               		<h5>
-               			May 2013
-               		</h5>
-               		<br/>
-               		<ul class="resumedetails">
-	               		<li>
-	               			Scholarship recipient
-	               		</li>
-	               	</ul>
-               		<br/>
-               	<!-- Excellence In Professional Communication for Sustainability -->
-            		<h3 class="blue">
-            			Excellence In Professional Communication for Sustainability
-            		</h3>
-					<h4>
-						<strong>
-							Writing Program (UCSB)
-						</strong>
-					</h4>
-               		<h5>
-               			June 2012
-               		</h5>
-               		<br/>
-               		<ul class="resumedetails">
-	               		<li>
-	               			Award recipient for <a href="assets/globalWarming.pdf" target="_blank">Global Warming Project business plan</a>
-	               		</li>
-	               	</ul>
-               		<br/>
-           		<!-- McNair -->
-        		<h3 class="blue">
-        			McNair Scholar
-        		</h3>
-				<h4>
-					<strong>
-						McNair Scholars Program &amp; Economics Department (UCSB)
-					</strong>
-				</h4>
-           		<h5>
-           			2010 - 2011
-           		</h5>
-           		<br/>
-           		<ul class="resumedetails">
-               		<li>
-               			Economics undergraduate researcher &amp; scholarship recipient
-               		</li>
-               		<br/>
-               		<li>
-               			Wrote <a href="assets/dotcomHousing.pdf" target="_blank">The Correlation between the 1990s Dot-Com Bubble and the 1998-2006 Housing Bubble</a>, during the Summer of 2011, under the mentorship of Stephen LeRoy, PhD &amp; Peter Rupert, PhD
-               		</li>
-               		<br/>
-               		<li>
-               			Wrote <a href="assets/econBubbles.pdf" target="_blank">Objectivity, Economic Bubbles, and the 1998-2006 Housing Market</a>, during the Summer of 2010, under the mentorship of Peter Rupert, PhD
-               		</li>			               		
-               	</ul>
-           		<br/>
            	</div>
         <br/>
    		<!-- Skills & Activities -->
@@ -375,20 +177,18 @@
 		<br/>
        		<ul class="resumedetails">
            		<li>
-           			JavaScript, R, SQL, HTML &amp; CSS, Git, UNIX
+           			JavaScript, C#, Python, &amp; Java
            		</li>
            		<br/>
            		<li>
-           			Adobe Creative Suite, Web Design, Painting
+           			GameSalad, Scratch, Unity
            		</li>
            		<br/>
            		<li>
-           			Entrepreneurship, Sales, Project Management, Technical Support
-           		</li>
+                Gaming, Programming, 3D Modeling, Running, Living
+              </li>
            		<br/>
-           		<li>
-           			Drumming, Hiking, Weight-lifting, Meditating, Living
-           		</li>
+           		
            	</ul>
        		<br/>
        	</div>
@@ -403,12 +203,9 @@
         <h6>
             Say hi
         </h6>
-         <a href="https://www.github.com/dcamposliz" target="_blank">
+         <a href="https://www.github.com/erikramosl" target="_blank">
          	<img src="https://cdn0.iconfinder.com/data/icons/octicons/1024/mark-github-256.png" height="35" width="35">
          </a> 
-         <a href="https://www.linkedin.com/in/dcamposliz" target="_blank">
-	         <img src="https://cdn1.iconfinder.com/data/icons/simple-icons/4096/linkedin-4096-black.png" alt="Facebook" height="45" width="45">
-         </a>
     </section>
 <!-- Footer Section -->
   <footer id="footer">
@@ -416,7 +213,7 @@
       	<h6><a href="projects.html">Projects</a> | <a href="cv.html">Curriculum Vitae</a></h6>
       	<br/>
           <h6>
-              &copy; 2016 <a href="index.html">David A. Campos</a>. All Rights Reserved.
+              &copy; 2016 <a href="index.html">Erik Ramos</a>. All Rights Reserved.
           </h6>
       </div>
   </footer>
