--- a/iwoJima.html
+++ b/iwoJima.html
@@ -57,86 +57,12 @@
             </div>
         </div>
     </nav>	
-<!-- HEADER -->
-    <header class="header2">
-        <div class="intro-body">
-            <div class="container">
-               	<h2 class="header2Text">
-               		Projects
-               	</h2>
-            </div>
-        </div>
-    </header>
 <!-- CORE BODY --><!-- listing projects -->
 
-<!-- Space Shooter -->
     <section class="container content-section">
-        <div class="container">
-            <h5>
-                Space Shooter
-            </h5>
-            <hr/>
-            <div class="row">
-                <div class="col-lg-7 col-sm-7" style="margin: 0 auto; text-align: center">
-                    <a href="spaceShooter.html" target="_blank">
-                        <img src="shooter.png" width="200px">
-                    </a>
-                </div>
-                <div class="col-lg-5 col-sm-5">
-                    <p class="projectDets" style="text-align: left">
-                        <a href="spaceShooter.html"><span style="font-size:1.5em"><strong>Space Shooter</strong></span></a> is a shooter game where you play as a space marine defending his space station from the invaders. This game was developed with <strong>GameSalad</strong>. 
-                    </p>
-                    <p><strong>Controls:</strong> <strong>LEFT ARROW</strong> &amp; <strong>RIGHT ARROW</strong> keys to move. <strong>SPACE</strong> to shoot.
-                    </p>
-                </div>
+            <div style="margin: 0 auto; text-align:center;">
+                <iframe src='http://e.gsrca.de/137496?s=640&mode=embed' width='640' height='458' allowtransparency='true' scrolling='no' style='border:none; margin: 0 auto' mozallowfullscreen  webkitallowfullscreen allowfullscreen />
             </div>
-        </div>
-    </section>
-<!-- FBATT -->
-    <section class="container content-section">
-        <div class="container">
-            <h5>
-                Fat Boys Adventure Through Time
-            </h5>
-            <hr/>
-            <div class="row">
-                <div class="col-lg-7 col-sm-7" style="margin: 0 auto; text-align: center">
-                    <a href="fat.html" target="_blank">
-                        <img src="fat.png" width="550px">
-                    </a>
-                </div>
-                <div class="col-lg-5 col-sm-5 wow fadeInUp delay-05s">
-                    <p class="projectDets">
-                        <a href="fat.html"><span style="font-size:1.5em"><strong>Fat Boys Adventure Through Time</strong></span></a> is a 2D platformer where you play as joey, a boy trying to defend his city . This game was developed with <strong>GameSalad</strong>
-                        <p><strong>Controls:</strong> <strong>LEFT ARROW</strong> &amp; <strong>RIGHT ARROW</strong> keys to move. <strong>X</strong> to shoot and <strong>Z</strong> to jump.
-                        </p>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-<!-- Island Defence -->
-    <section class="container content-section">
-        <div class="container">
-            <h5>
-                Island Defence: Iwo Jima
-            </h5>
-            <hr/>
-            <div class="row">
-                <div class="col-lg-7 col-sm-7" style="margin: 0 auto; text-align: center">
-                    <a href="iwoJima.html" target="_blank">
-                        <img src="iwoJima.png" width="550pxx">
-                    </a>
-                </div>
-                <div class="col-lg-5 col-sm-5 wow fadeInUp delay-05s">
-                    <p class="projectDets">
-                        <a href="iwoJima.html"><span style="font-size:1.5em"><strong>Island Defence: Iwo Jima</strong></span></a> is a top-down shooter where you play as "Gatz" who was sent to the island Iwo Jima with his platoon to defend the island, but his platoon was killed and now he is the only one left to defend the island from the japanese. This game was developed with <strong>GameSalad</strong>
-                        <p><strong>Controls:</strong> <strong>W, A, S, &amp; D</strong> to move around, <strong>R</strong> to reload, <strong>F</strong> to switch weapon.
-                        </p>
-                    </p>
-                </div>
-            </div>
-        </div>
     </section>
 
 <!-- back to top -->
