--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             </p>
                             <br/>
                             <p class="introDets">
-                                I graduated from <a href="http://monarchs.guhsd.net/"><strong>Monte Vista High School</strong></a>.
+                                I am a student at <a href="http://monarchs.guhsd.net/"><strong>Monte Vista High School</strong></a>.
                             </p>
                             <br/>
                             <p class="introDets">
