--- a/spaceShooter.html
+++ b/spaceShooter.html
@@ -97,14 +97,15 @@
 	<!-- Custom Theme JavaScript -->
     	<script src="js/grayscale.js"></script>
 	<!-- GA tracking script -->
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		  ga('create', 'UA-54935029-1', 'auto');
-		  ga('send', 'pageview');
-		</script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-85457023-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 	<!-- Piwik -->
 		<script type="text/javascript">
 		  var _paq = _paq || [];
