--- a/fat.html
+++ b/fat.html
@@ -4,19 +4,19 @@
 <!--head.META-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1">
-    <meta name="description" content="Hi. I'm Erik, a hacker and aspiring game developer who loves building meaningful products.">
+    <meta name="description" content="Hi. I'm Erik, a hacker and aspiring game developer.">
     <meta name="keywords" content="Erik, Ramos, JavaScript, C#, Java, GameSalad">
     <meta name="author" content="Erik Ramos">
     <meta property="og:title" content="Erik Ramos"/>
-    <meta property="og:image" content="http://i.imgur.com/pH20JCA.png"/>
-    <meta property="og:url" content="http://www.erikramosl.com"/>
-    <meta property="og:description" content="Hi. I'm Erik, a hacker and aspiring game developer who loves building meaningful products."/>
+    <meta property="og:image" content="img/erik_2.png"/>
+    <meta property="og:url" content="http://www.erikramos.net"/>
+    <meta property="og:description" content="Hi. I'm Erik, a hacker and aspiring game developer."/>
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="https://www.erikramosl.com">
+    <meta name="twitter:url" content="https://www.erikramos.net">
     <meta name="twitter:title" content="Erik A Ramos">
-    <meta name="twitter:description" content="Hi. I'm Erik, a hacker and aspiring game developer who loves building meaningful products.">
-    <meta name="twitter:image" content="http://i.imgur.com/pH20JCA.png">
-    <link rel="publisher" href="https://www.erikramosl.com"/>
+    <meta name="twitter:description" content="Hi. I'm Erik, a hacker and aspiring game developer.">
+    <meta name="twitter:image" content="img/erik_2.png">
+    <link rel="publisher" href="https://www.erikramos.net"/>
 <!--head.CSS-->
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -105,7 +105,6 @@
 
             ga('create', 'UA-85457023-1', 'auto');
             ga('send', 'pageview');
-
 </script>
 </body>
 </html>
