--- a/projects.html
+++ b/projects.html
@@ -8,15 +8,15 @@
     <meta name="keywords" content="Erik, Ramos, JavaScript, C#, Java, GameSalad">
     <meta name="author" content="Erik Ramos">
     <meta property="og:title" content="Erik Ramos"/>
-    <meta property="og:image" content="img/erik.png"/>
-    <meta property="og:url" content="http://www.erikramosl.com"/>
+    <meta property="og:image" content="img/erik_2.png"/>
+    <meta property="og:url" content="http://www.erikramos.net"/>
     <meta property="og:description" content="Hi. I'm Erik, a hacker and aspiring game developer."/>
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="https://www.erikramosl.com">
+    <meta name="twitter:url" content="https://www.erikramos.net">
     <meta name="twitter:title" content="Erik A Ramos">
     <meta name="twitter:description" content="Hi. I'm Erik, a hacker and aspiring game developer.">
-    <meta name="twitter:image" content="img/erik.png">
-    <link rel="publisher" href="img/erik.png"/>
+    <meta name="twitter:image" content="img/erik_2.png">
+    <link rel="publisher" href="img/erik_2.png"/>
 <!--head.CSS-->
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
